@@ -12,7 +12,7 @@ PATH=@sbindir@:@bindir@:/usr/ucb:/usr/bin:/bin:${PATH}
 export PATH
 
 if [ $# -ne 1 ]; then
-	echo "Usage: $0 cd|fd"
+	echo "Usage: $0 cd|cdrom|fd|floppy"
 	exit 2
 fi
 
@@ -26,7 +26,7 @@ fi
 # append name of medium
 case "$1" in
   cd|fd) fs=$fs/$1;;
-  *)	 echo "Usage: $0 cd|fd"; exit 2;;
+  *)	 echo "Usage: $0 cd|cdrom|fd|floppy"; exit 2;;
 esac
 
 # is the medium mounted?
@@ -47,6 +47,7 @@ else
 fi
 
 case $1 in
-  cd)	eject;; # eject CD-ROM
-  fd)	echo "Ok to remove disk";;
+  cd|cdrom)	eject cdrom || eject ;; # eject CD-ROM
+  fd|floppy)	eject floppy || eject
+		echo "Ok to remove disk" ;;
 esac
